Thu Apr 22 17:48:49 BST 2004 (njh)
----------------------------------
 * clamav-milter: No need to parse the received line if --headers is given
		If -outgoing is given put generated emails in the deferred
			queue to avoid the milter being called twice at the
			same time (one on the incoming one on the outgoing)
		header_list_print, ensure From lines are escaped, may not be
			needed but it is better to be on the safe side
		When loadbalancing, fail to start only if no servers can be
			reached (used to fail if any one server could not be
			reached)
		Not all servers were load balanced
 * docs/man:	Clarified load balancing specification

Wed Apr 21 16:28:49 BST 2004 (njh)
----------------------------------
 * clamav-milter: If /dev/console fails to open, open /dev/null instead on fds 1
 			and 2
		TCP_WRAPPERS code now uses inet_ntop()
		Simplify virus string
		Sort out tabs in the hard coded e-mail message

Wed Apr 21 09:10:07 BST 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Add another Office2000 signature

Wed Apr 21 00:27:18 CEST 2004 (tk)
----------------------------------
  * libclamav: scanners:
	+ scan full OLE2 directory (Trog);
	+ ignore popular file types (Dirk Mueller <mueller*kde.org>)
	+ improve compression ratio calculation (Dirk Mueller)
	+ detect more mail file types
  * clamscan: add --max-ratio option (Dirk Mueller)
  * docs: update Japanese documentation (Masaki Ogawa <proc*mac.com>)

Tue Apr 20 15:18:58 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Handle hostaddr == NULL
  	Added X-Virus-Scanned
	Consistent handling of X-Virus-Status

Tue Apr 20 09:13:46 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Print a better message if hostaddr is null in
		clamfi_connect()
	Handle "i" macro not being set in sendmail.cf

Mon Apr 19 23:11:48 BST 2004 (njh)
----------------------------------
  * clamav-milter: Added --from