@@ -90,6 +90,10 @@ You may find INPUT_MAIL_FILTERS is not needed on your machine, however it
 is recommended by the Sendmail documentation and I recommend going along
 with that.
 
+If you see an unsafe socket error from sendmail, it means that the permissions
+of the /var/run/clamav directory are too open. Check you have correctly run
+chown and chmod.
+
 The above example shows clamav-milter, clamd and sendmail all on the
 same machine, however using TCP they may reside on different machines,
 indeed clamav-milter is capable of talking to multiple clamds for redundancy
@@ -354,6 +358,9 @@ Changes
 			reached (used to fail if any one server could not be
 			reached)
 		Not all servers were load balanced
+0.70r	23/4/04	Ensure only From lines are escaped
+		Also defer generated emails if --force-scan is given
+		Better subject for quarantine e-mails
 
 BUG REPORTS
 
