@@ -1,3 +1,9 @@
+Fri Apr 23 10:14:00 BST 2004 (njh)
+----------------------------------
+ * clamav-milter:	Ensure only From lines are escaped
+		Also defer generated emails if --force-scan is given
+		Better subject for quarantine e-mails
+
 Thu Apr 22 17:48:49 BST 2004 (njh)
 ----------------------------------
  * clamav-milter: No need to parse the received line if --headers is given
